--- a/views/index.pug
+++ b/views/index.pug
@@ -14,8 +14,8 @@ block content
 
   nav.navbar.fixed-bottom.navbar-light.bg-light
     .container-fluid.d-flex
-      p.fs-7 This utility is not an official vMix product.
-      p A 10% project by 
+      p.fs-7.mb-0 This utility is not an official vMix product.
+      p.mb-0 A 10% project by 
         a(href="https://octocue.com") OctoCue
         | .
       
