--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,6 +10,16 @@ html
     link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC' crossorigin='anonymous')
     link(rel='stylesheet', href='/css/style.css')
   body
-    block content
+    #main-wrapper
+      .container-fluid.my-4.flex-grow-1
+        block content
+
+      nav.navbar.navbar-light.bg-light
+        .container-fluid.justify-content-end
+          p.mb-0 Supported by 
+            a(href="https://octocue.com") 
+              img(src="https://octocue.com/icons/octocue_banner_mid_dark.png", alt="Logo: OctoCue" height='30px')
+            | .
+
     script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js' integrity='sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM' crossorigin='anonymous')
     script(src="/js/api.js") 
