--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title= title
+    title vMix API Reference
     meta(charset='utf-8')
     meta(name='viewport' content='width=device-width, initial-scale=1')
     link(rel='preconnect' href='https://fonts.googleapis.com')
@@ -9,6 +9,7 @@ html
     link(href='https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400&display=swap' rel='stylesheet')
     link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC' crossorigin='anonymous')
     link(rel='stylesheet', href='/css/style.css')
+    link(rel="shortcut icon" type="image/png" href="/img/vmixapi-favicon.png")
   body
     #main-wrapper
       .container-fluid.my-4.flex-grow-1
