--- a/views/layout.pug
+++ b/views/layout.pug
@@ -16,7 +16,8 @@ html
         block content
 
       nav.navbar.navbar-light.bg-light
-        .container-fluid.justify-content-end
+        .container-fluid.justify-content-between 
+          p.mb-0 vMix is a registered trademark of StudioCoast Pty Ltd.
           p.mb-0 Supported by 
             a(href="https://octocue.com") 
               img(src="https://octocue.com/icons/octocue_banner_mid_dark.png", alt="Logo: OctoCue" height='30px')
