--- a/views/index.pug
+++ b/views/index.pug
@@ -16,6 +16,8 @@ block content
   #apiDetails
 
   #groupsWrapper.d-flex.flex-wrap
+
+  #inspiration
       
   .modal#aboutModal(tabindex='-1')
     .modal-dialog.modal-lg
