--- a/views/layout.pug
+++ b/views/layout.pug
@@ -12,12 +12,11 @@ html
     link(rel="shortcut icon" type="image/png" href="/img/vmixapi-favicon.png")
   body
     #main-wrapper
-      .container-fluid.my-4.flex-grow-1
-        block content
+      block content
 
       nav.navbar.navbar-light.bg-light
         .container-fluid.justify-content-between 
-          p.mb-0 vMix is a registered trademark of StudioCoast Pty Ltd.
+          p.mb-0(style='font-size: 0.8em;') vMix is a registered trademark of StudioCoast Pty Ltd.
           p.mb-0 Supported by 
             a(href="https://octocue.com") 
               img(src="https://octocue.com/icons/octocue_banner_mid_dark.png", alt="Logo: OctoCue" height='30px')
