--- a/views/index.pug
+++ b/views/index.pug
@@ -1,30 +1,27 @@
 extends layout
 
 block content
-  .container-fluid.my-3
-    .d-flex.align-items-center
-      .flex-grow-1
-        h1 vMix API Reference
-      .d-flex.flex-row(style='column-gap: 1em;')
-        //- a.btn.btn-outline-primary(data-bs-toggle='offcanvas' href='#offcanvasExample' role='button' aria-controls='offcanvasExample') Full function list
-        a.btn.btn-outline-primary(data-bs-toggle='modal' data-bs-target='#aboutModal') About
-  .d-flex.flex-row.flex-grow-1
-    .container-fluid.d-none.d-md-block(style='width: auto;')
+  .d-flex.align-items-center.bg-dark.p-3
+    .flex-grow-1
+      h1(style='color: var(--bs-light); font-weight: bold;') vMix API Reference
+    .d-flex.flex-row(style='column-gap: 1em;')
+      //- a.btn.btn-outline-primary(data-bs-toggle='offcanvas' href='#offcanvasExample' role='button' aria-controls='offcanvasExample') Full function list
+      a.btn.btn-primary(data-bs-toggle='modal' data-bs-target='#aboutModal') About
+  .d-flex.flex-row.flex-grow-1.mt-3
+    .container-fluid.d-none.d-md-block(style='width: auto; padding-left: 0;')
       .accordion-flush#referenceList
 
     .container-fluid.flex-grow-1.mb-5
       
-      label.form-label(for='exampleDataList') Search 406 API functions:
+      label.form-label(for='exampleDataList') Search API database:
       .input-group.input-group-lg.mb-5
-        input#apiList.form-control.form-control(list='apiListOptions' placeholder='Type to search...' autofocus)
+        input#apiList.form-control.form-control(list='apiListOptions' placeholder='Type to search...' autofocus style='border-width: 5px; font-weight: bold;')
         button.btn.btn-outline-secondary#inputClear(type='button') Clear
       datalist#apiListOptions
       
       #apiDetails
 
-      #groupsWrapper.d-flex.flex-wrap
-
-      #inspiration
+      #inspiration.d-flex.justify-content-center.my-5
       
   .modal#aboutModal(tabindex='-1')
     .modal-dialog.modal-lg
