--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,12 +14,12 @@ html
     #main-wrapper
       block content
 
-      nav.navbar.navbar-light.bg-light
+      nav.navbar.navbar-dark.bg-dark
         .container-fluid.justify-content-between 
-          p.mb-0(style='font-size: 0.8em;') vMix is a registered trademark of StudioCoast Pty Ltd.
-          p.mb-0 Supported by 
+          p.mb-0(style='font-size: 0.8em; color: var(--bs-light);') vMix is a registered trademark of StudioCoast Pty Ltd.
+          p.mb-0(style='font-size: 0.8em; color: var(--bs-light);') Supported by&nbsp;&nbsp;
             a(href="https://octocue.com") 
-              img(src="https://octocue.com/icons/octocue_banner_mid_dark.png", alt="Logo: OctoCue" height='30px')
+              img(src="/img/octocue_banner_mid_light.png", alt="Logo: OctoCue" height='30px')
             | .
 
     script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js' integrity='sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM' crossorigin='anonymous')
