--- a/views/index.pug
+++ b/views/index.pug
@@ -12,6 +12,8 @@ block content
       .accordion-flush#referenceList
 
     .container-fluid.flex-grow-1.mb-5
+
+      .alert.alert-warning Warning: Replay events are currently based on API v23 - v24 (current) info coming soon.
       
       label.form-label(for='exampleDataList') Search API database:
       .input-group.input-group-lg.mb-5
