--- a/views/index.pug
+++ b/views/index.pug
@@ -73,6 +73,6 @@ block content
           p It's not the original reference source - you should refer to the 
             a(href="https://www.vmix.com/help23/index.htm?ShortcutFunctionReference.html") vMix shortcut table on vmix.com
             |  for this.
-          p vMixAPI.com is not made, operated or endorsed, by StudioCoast Pty Ltd. so don't write to them if you find a mistake here.          
+          p vMixAPI.com is not made, operated or endorsed by StudioCoast Pty Ltd. so don't write to them if you find a mistake here.          
         .modal-footer
           button#dismissWarning.btn.btn-primary(type='button' data-bs-dismiss='modal') Close
