--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,9 +17,9 @@ html
       nav.navbar.navbar-dark.bg-dark
         .container-fluid.justify-content-between 
           p.mb-0(style='font-size: 0.8em; color: var(--bs-light);') vMix is a registered trademark of StudioCoast Pty Ltd.
-          p.mb-0(style='font-size: 0.8em; color: var(--bs-light);') Supported by&nbsp;&nbsp;
-            a(href="https://octocue.com")
-              img(src="/img/octocue_banner_mid_light.png", alt="Logo: OctoCue" height='30px')
+          //- p.mb-0(style='font-size: 0.8em; color: var(--bs-light);') Supported by&nbsp;&nbsp;
+          //-   a(href="https://octocue.com")
+          //-     img(src="/img/octocue_banner_mid_light.png", alt="Logo: OctoCue" height='30px')
 
     script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js' integrity='sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM' crossorigin='anonymous')
     script(src="/js/api.js") 
