--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,12 +4,14 @@ html
     title Unofficial vMix API Reference
     meta(charset='utf-8')
     meta(name='viewport' content='width=device-width, initial-scale=1')
+    link(href='https://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet')
     link(rel='preconnect' href='https://fonts.googleapis.com')
     link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin='')
     link(href='https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400&display=swap' rel='stylesheet')
     link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC' crossorigin='anonymous')
     link(rel='stylesheet', href='/css/style.css')
     link(rel="shortcut icon" type="image/png" href="/img/vmixapi-favicon.png")
+  
   body
     #main-wrapper
       block content
@@ -17,9 +19,9 @@ html
       nav.navbar.navbar-dark.bg-dark
         .container-fluid.justify-content-between 
           p.mb-0(style='font-size: 0.8em; color: var(--bs-light);') vMix is a registered trademark of StudioCoast Pty Ltd.
-          //- p.mb-0(style='font-size: 0.8em; color: var(--bs-light);') Supported by&nbsp;&nbsp;
-          //-   a(href="https://octocue.com")
-          //-     img(src="/img/octocue_banner_mid_light.png", alt="Logo: OctoCue" height='30px')
+          p.mb-0(style='font-size: 0.8em; color: var(--bs-light);') Supported by&nbsp;&nbsp;
+            a(href="https://octocue.com/?ref=vmixapi")
+              img(src="/img/octocue_banner_mid_light.png", alt="Logo: OctoCue" height='30px')
 
     script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js' integrity='sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM' crossorigin='anonymous')
     script(src="/js/api.js") 
