--- a/views/index.pug
+++ b/views/index.pug
@@ -20,7 +20,7 @@ block content
 
     .container-fluid.flex-grow-1.mb-5
           
-      label.form-label(for='exampleDataList') Search vMix v24 API database:
+      label.form-label(for='exampleDataList') Search vMix API database:
       .input-group.input-group-lg.mb-5
         input#apiList.form-control.form-control(list='apiListOptions' placeholder='Type to search...' autofocus style='border-width: 5px; font-weight: bold;')
         button.btn.btn-outline-secondary#inputClear(type='button') Clear
