--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,6 +11,12 @@ html
     link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC' crossorigin='anonymous')
     link(rel='stylesheet', href='/css/style.css')
     link(rel="shortcut icon" type="image/png" href="/img/vmixapi-favicon.png")
+    meta(property='og:url' content='https://vmixapi.com')
+    meta(property='og:type' content='article')
+    meta(property='og:title' content='The unofficical vMix API reference')
+    meta(property='og:description' content='A reference for the vMix API, including samples for Companion, VB.NET, TCP and HTTP.')
+    meta(property='og:image' content='https://vmixapi.com/img/vmixapi-icon.png')
+
   
   body
     #main-wrapper
